tests/codegen/fail/021-slice-invalid-range.hyg
let arr1 = array(10, 3);
let arr2 = slice(arr1, 7, 2); ()
